project target blank

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
                   <h2 class="projects__title">CHAT-VIOLETH</h2>
 
-                  <a href="https://mychat.fly.dev" class="projects__button">
+                  <a href="https://mychat.fly.dev" target="_blank" class="projects__button">
                      View Demo  <i class="ri-external-link-line"></i>
                   </a>
                 </div>
