--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 
             <div class="projects__container container grid">
                <article class="projects__card">
-                <img src="assets/img/project-img-1.jpg" alt="projects image" class="projects__img"> 
+                <img src="assets/img/projectchat.png" alt="projects image" class="projects__img"> 
                 
                 <div class="div projects__modal">
                   <span class="projects__subtitle">Web</span>
@@ -281,6 +281,11 @@
                   <a href="https://mychat.fly.dev" target="_blank" class="projects__button">
                      View Demo  <i class="ri-external-link-line"></i>
                   </a>
+
+                <a href="https://github.com/ARGUMEDO1609/MY_CHAT.git" target="_blank" class="projects__button">
+                     View Code  <i class="ri-external-link-line"></i>
+                  </a>
+
                 </div>
                </article>
 
