--- a/index.html
+++ b/index.html
@@ -309,16 +309,20 @@
                  </article>
 
                  <article class="projects__card">
-                  <img src="assets/img/project-img-3.jpg" alt="projects image" class="projects__img"> 
+                  <img src="assets/img/blog_app.png" alt="projects image" class="projects__img"> 
                   
                   <div class="div projects__modal">
                     <span class="projects__subtitle">Web</span>
   
-                    <h2 class="projects__title">Modern website</h2>
+                    <h2 class="projects__title">Blog Commet</h2>
   
                     <a href="#" class="projects__button">
                        View Demo  <i class="ri-external-link-line"></i>
                     </a>
+                     <a href="https://github.com/ARGUMEDO1609/blog_app.git"
+                      target="_blank" class="projects__button">
+                     View Code  <i class="ri-external-link-line"></i>
+                  </a>
                   </div>
                  </article>
                </div> 
