deploy enlace acualizado del proyecto

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
   
                     <h2 class="projects__title">Blog Commet</h2>
   
-                    <a href="#" class="projects__button">
+                    <a href="https://blog-comment.fly.dev" class="projects__button">
                        View Demo  <i class="ri-external-link-line"></i>
                     </a>
                      <a href="https://github.com/ARGUMEDO1609/blog_app.git"
