--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
   
                     <h2 class="projects__title">BLOG PREGUNTAS</h2>
   
-                    <a href="https://blog-preguntas.fly.dev/" class="projects__button">
+                    <a href="https://blog-preguntas1.fly.dev/" class="projects__button">
                        View Demo  <i class="ri-external-link-line"></i>
                     </a>
 
@@ -316,7 +316,7 @@
   
                     <h2 class="projects__title">Blog Commet</h2>
   
-                    <a href="https://blog-comment.fly.dev" class="projects__button">
+                    <a href="https://blog-comment2.fly.dev/" class="projects__button">
                        View Demo  <i class="ri-external-link-line"></i>
                     </a>
                      <a href="https://github.com/ARGUMEDO1609/blog_app.git"
